--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" />
+  <link rel="icon" type="image/png"  href="/src/assets/images/newlogo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Marketplace</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
